package org.example.dao;

import org.example.model.Orders;

/**
 * This class extends the AbstractDAO class and sets the parameter T to the object Order
 *
 * @author Stoica Irina
 * @since Apr 12, 2022
 *
 */
public class OrderDAO extends AbstractDAO<Orders>{
}
